Revision history for P5built-ins

{{$NEXT}}

0.0.22  2019-03-17T23:45:04+01:00
    - Tighten up dependencies for updated P5* modules
    - Update copyright year

0.0.21  2018-06-01T13:00:28+02:00
    - Added support for abs cos crypt exp int log sin sqrt
    - Replace dependency of P5rand by P5math
    - Now at 100 functions!

0.0.20  2018-05-09T23:43:13+02:00
    - Added support for defined, undef
    - P5rand no longer exports srand

0.0.19  2018-05-07T13:05:44+02:00
    - Added support for getpriority, setpriority, getppid, getpgrp
    - Added support for rand, srand
    - Added support for reset

0.0.18  2018-05-05T17:09:45+02:00
    - Added support for print, printf, say, STDIN, STDOUT, STDERR

0.0.17  2018-05-04T15:30:23+02:00
    - Added support for __FILE__, __LINE__, __PACKAGE__, __SUB__

0.0.16  2018-05-03T22:31:55+02:00
    - Forgot to add the dependency on getprotobyname, Travis++

0.0.15  2018-05-03T21:41:05+02:00
    - Added support for endprotoent, getprotobyname, getprotobynumber,
      getprotoent, setprotoent
    - Added support for forgotten setpwent and setgrent

0.0.14  2018-05-03T00:03:08+02:00
    - Added support for endnetent, getnetbyaddr, getnetbyname, getnetent
      setnetent
    - Added support for endservent, getservbyname, getservbyport, getservent
      setservent
    - Added some missing exports to the documentation / tests:
      now at 72 functions

0.0.13  2018-05-01T16:02:49+02:00
    - Added support for endgrent, endpwent,
      getgrent, getgrnam, getgrgid, getlogin, getpwent, getpwnam, getpwuid

0.0.12  2018-04-29T23:33:04+02:00
    - Added support for localtime(), gmtime()

0.0.11  2018-04-29T12:12:24+02:00
    - Added support for shift(), unshift()
    - Added support for opendir, readdir, telldir, seekdir, rewinddir, closedir

0.0.10  2018-04-28T11:12:27+02:00
    - Added support for fileno(), pop(), push(), readlink(), seek()

0.0.9  2018-04-26T13:02:35+02:00
    - Forgot to add the dependency on chdir, Travis++
