@@ -5,47 +5,47 @@
   ],
   "build-depends" : [ ],
   "depends" : [
-    "P5__FILE__",
-    "P5caller:ver<0.0.6>:auth<cpan:ELIZABETH>",
-    "P5chdir",
-    "P5chomp",
-    "P5chr",
-    "P5defined",
-    "P5each",
-    "P5fc",
-    "P5fileno",
-    "P5getgrnam:ver<0.0.6>:auth<cpan:ELIZABETH>",
-    "P5getnetbyname:ver<0.0.4>:auth<cpan:ELIZABETH>",
-    "P5getpriority",
-    "P5getprotobyname:ver<0.0.3>:auth<cpan:ELIZABETH>",
-    "P5getpwnam:ver<0.0.5>:auth<cpan:ELIZABETH>",
-    "P5getservbyname:ver<0.0.4>:auth<cpan:ELIZABETH>",
-    "P5hex",
-    "P5index",
-    "P5lc",
-    "P5lcfirst",
-    "P5length",
-    "P5localtime:ver<0.0.6>:auth<cpan:ELIZABETH>",
-    "P5math",
-    "P5opendir:ver<0.0.4>:auth<cpan:ELIZABETH>",
-    "P5pack",
-    "P5print",
-    "P5push",
-    "P5quotemeta",
-    "P5readlink",
-    "P5ref",
-    "P5reset",
-    "P5reverse",
-    "P5seek",
-    "P5shift",
-    "P5sleep",
-    "P5study",
-    "P5substr",
-    "P5tie",
-    "P5times:ver<0.0.6>:auth<cpan:ELIZABETH>",
-    "P5-X"
+    "P5__FILE__:ver<0.0.3>:auth<cpan:ELIZABETH>",
+    "P5caller:ver<0.0.7>:auth<cpan:ELIZABETH>",
+    "P5chdir:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5chomp:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5chr:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5defined:ver<0.0.3>:auth<cpan:ELIZABETH>",
+    "P5each:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5fc:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5fileno:ver<0.0.4>:auth<cpan:ELIZABETH>",
+    "P5getgrnam:ver<0.0.7>:auth<cpan:ELIZABETH>",
+    "P5getnetbyname:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5getpriority:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5getprotobyname:ver<0.0.4>:auth<cpan:ELIZABETH>",
+    "P5getpwnam:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5getservbyname:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5hex:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5index:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5lc:ver<0.0.7>:auth<cpan:ELIZABETH>",
+    "P5lcfirst:ver<0.0.8>:auth<cpan:ELIZABETH>",
+    "P5length:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5localtime:ver<0.0.7>:auth<cpan:ELIZABETH>",
+    "P5math:ver<0.0.3>:auth<cpan:ELIZABETH>",
+    "P5opendir:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5pack:ver<0.0.9>:auth<cpan:ELIZABETH>",
+    "P5print:ver<0.0.4>:auth<cpan:ELIZABETH>",
+    "P5push:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5quotemeta:ver<0.0.4>:auth<cpan:ELIZABETH>",
+    "P5readlink:ver<0.0.7>:auth<cpan:ELIZABETH>",
+    "P5ref:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5reset:ver<0.0.4>:auth<cpan:ELIZABETH>",
+    "P5reverse:ver<0.0.6>:auth<cpan:ELIZABETH>",
+    "P5seek:ver<0.0.3>:auth<cpan:ELIZABETH>",
+    "P5shift:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5sleep:ver<0.0.8>:auth<cpan:ELIZABETH>",
+    "P5study:ver<0.0.4>:auth<cpan:ELIZABETH>",
+    "P5substr:ver<0.0.5>:auth<cpan:ELIZABETH>",
+    "P5tie:ver<0.0.12>:auth<cpan:ELIZABETH>",
+    "P5times:ver<0.0.7>:auth<cpan:ELIZABETH>",
+    "P5-X:ver<0.0.6>:auth<cpan:ELIZABETH>"
   ],
-  "description" : "Implement Perl 5's built-in functions",
+  "description" : "Implement Perl's built-in functions",
   "license" : "Artistic-2.0",
   "name" : "P5built-ins",
   "perl" : "6.c",
@@ -59,5 +59,5 @@
     "CPAN5"
   ],
   "test-depends" : [ ],
-  "version" : "0.0.22"
+  "version" : "0.0.23"
 }
