@@ -1,46 +1,46 @@
 use v6.c;
 
 my %export;
-module P5built-ins:ver<0.0.22>:auth<cpan:ELIZABETH> {
-    use P5__FILE__;
-    use P5caller:ver<0.0.6>:auth<cpan:ELIZABETH>;
-    use P5chdir;
-    use P5chomp;
-    use P5chr;
-    use P5defined;
-    use P5each;
-    use P5fc;
-    use P5fileno;
-    use P5getgrnam:ver<0.0.6>:auth<cpan:ELIZABETH>;
-    use P5getnetbyname:ver<0.0.4>:auth<cpan:ELIZABETH>;
-    use P5getpriority;
-    use P5getprotobyname:ver<0.0.3>:auth<cpan:ELIZABETH>;
-    use P5getpwnam:ver<0.0.5>:auth<cpan:ELIZABETH>;
-    use P5getservbyname:ver<0.0.4>:auth<cpan:ELIZABETH>;
-    use P5hex;
-    use P5index;
-    use P5lc;
-    use P5lcfirst;
-    use P5length;
-    use P5localtime:ver<0.0.6>:auth<cpan:ELIZABETH>;
-    use P5math;
-    use P5opendir:ver<0.0.4>:auth<cpan:ELIZABETH>;
-    use P5pack;
-    use P5print;
-    use P5push;
-    use P5quotemeta;
-    use P5readlink;
-    use P5ref;
-    use P5reset;
-    use P5reverse;
-    use P5seek;
-    use P5shift;
-    use P5sleep;
-    use P5study;
-    use P5substr;
-    use P5tie;
-    use P5times:ver<0.0.6>:auth<cpan:ELIZABETH>;
-    use P5-X;
+module P5built-ins:ver<0.0.23>:auth<cpan:ELIZABETH> {
+    use P5__FILE__:ver<0.0.3>:auth<cpan:ELIZABETH>;
+    use P5caller:ver<0.0.7>:auth<cpan:ELIZABETH>;
+    use P5chdir:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5chomp:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5chr:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5defined:ver<0.0.3>:auth<cpan:ELIZABETH>;
+    use P5each:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5fc:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5fileno:ver<0.0.4>:auth<cpan:ELIZABETH>;
+    use P5getgrnam:ver<0.0.7>:auth<cpan:ELIZABETH>;
+    use P5getnetbyname:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5getpriority:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5getprotobyname:ver<0.0.4>:auth<cpan:ELIZABETH>;
+    use P5getpwnam:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5getservbyname:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5hex:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5index:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5lc:ver<0.0.7>:auth<cpan:ELIZABETH>;
+    use P5lcfirst:ver<0.0.8>:auth<cpan:ELIZABETH>;
+    use P5length:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5localtime:ver<0.0.7>:auth<cpan:ELIZABETH>;
+    use P5math:ver<0.0.3>:auth<cpan:ELIZABETH>;
+    use P5opendir:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5pack:ver<0.0.9>:auth<cpan:ELIZABETH>;
+    use P5print:ver<0.0.4>:auth<cpan:ELIZABETH>;
+    use P5push:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5quotemeta:ver<0.0.4>:auth<cpan:ELIZABETH>;
+    use P5readlink:ver<0.0.7>:auth<cpan:ELIZABETH>;
+    use P5ref:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5reset:ver<0.0.4>:auth<cpan:ELIZABETH>;
+    use P5reverse:ver<0.0.6>:auth<cpan:ELIZABETH>;
+    use P5seek:ver<0.0.3>:auth<cpan:ELIZABETH>;
+    use P5shift:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5sleep:ver<0.0.8>:auth<cpan:ELIZABETH>;
+    use P5study:ver<0.0.4>:auth<cpan:ELIZABETH>;
+    use P5substr:ver<0.0.5>:auth<cpan:ELIZABETH>;
+    use P5tie:ver<0.0.12>:auth<cpan:ELIZABETH>;
+    use P5times:ver<0.0.7>:auth<cpan:ELIZABETH>;
+    use P5-X:ver<0.0.6>:auth<cpan:ELIZABETH>;
 
     # there must be a better way to do this, but this will work for now
     %export = MY::.keys.grep( *.starts-with('&') ).map: { $_ => ::($_) };
@@ -60,7 +60,7 @@ multi sub EXPORT(*@args) {
 
 =head1 NAME
 
-P5built-ins - Implement Perl 5's built-in functions
+P5built-ins - Implement Perl's built-in functions
 
 =head1 SYNOPSIS
 
@@ -73,7 +73,7 @@ P5built-ins - Implement Perl 5's built-in functions
 =head1 DESCRIPTION
 
 This module provides an easy way to import a growing number of built-in
-functions of Perl 5 in Perl 6.  Currently supported at:
+functions of Perl in Raku  Currently supported at:
 
   abs caller chdir chomp chop chr closedir cos crypt defined each endgrent
   endnetent endprotoent endpwent endservent exp fc fileno getgrent getgrgid
@@ -134,7 +134,7 @@ Pull Requests are welcome.
 
 Copyright 2018-2019 Elizabeth Mattijsen
 
-Re-imagined from Perl 5 as part of the CPAN Butterfly Plan.
+Re-imagined from Perl as part of the CPAN Butterfly Plan.
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
